--- a/style.css
+++ b/style.css
@@ -467,8 +467,10 @@ h1 {
 
 .ad-banner {
   position: fixed;
+  
   top: 0;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   width: 100%;
   height: auto;
   display: flex;
