--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
 @media (max-width: 320px) {
   .game-container {
     padding: 12px;
-    max-width: 280px;
+    max-width: 350px;  /*  max-width: 280px; */
   }
   .dark-mode .game-container {
     padding: 12px;
-    max-width: 280px;
+    max-width: 350px;  /*  max-width: 280px; */
   }
   .letter {
     font-size: 1.4rem;
@@ -29,7 +29,7 @@
   }
   .keyboard {
     width: 100%;
-    max-width: 500px;
+    max-width: 420px; /* max-width: 500px; */
   }
 
   .letter {
